--- a/FACTURA_MDI/src/MODELO/menMarket.form
+++ b/FACTURA_MDI/src/MODELO/menMarket.form
@@ -52,6 +52,12 @@
                 <Property name="text" type="java.lang.String" value="Paste"/>
               </Properties>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="contvent4">
+              <Properties>
+                <Property name="mnemonic" type="int" value="121"/>
+                <Property name="text" type="java.lang.String" value="Copy"/>
+              </Properties>
+            </MenuItem>
           </SubComponents>
         </Menu>
       </SubComponents>
